# CENG464-MSH-SmartHome

./: CMakeLists.txt  README.md  msh_log.txt  system_log.txt
MHScontrol/: MHScontrol.cbp  MHScontrol.depend
docs/: CENG 464 – Term Project (Phase 1).docx
include/: Camera.h  DetectionManager.h  Detector.h  Device.h  DeviceFactory.h  DeviceManager.h  DeviceManagerBase.h  Light.h  LogManager.h  MSHController.h  Menu.h  ModeManager.h  ModeManagerBase.h  SecurityManager.h  StateManager.h  StateManagerBase.h  TV.h
src/: Camera.cpp  DetectionManager.CPP  DetectionManager.cpp  Detector.cpp  Device.cpp  DeviceFactory.cpp  DeviceManager.cpp  Light.cpp  LogManager.cpp  MSHController.cpp  Menu.cpp  ModeManager.cpp  SecurityManager.cpp  StateManager.cpp  TV.cpp  main.cpp
